--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_API_KEY = "AIzaSyDr88kaWw7BCe-o3LLBr-i_5q2fil_V1Wc"
-SEARCH_ENGINE_ID = "705919b7452e840e5"
-TESSERACT_PATH=C:\Program Files\Tesseract-OCR\tesseract.exe
+GOOGLE_API_KEY = "google_api_key"
+SEARCH_ENGINE_ID = "search_engine_id"
+TESSERACT_PATH= "tesseract_path"
